// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Checkbox Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-dOSRxR iFXefe sc-bBrNTY jxRDWp"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fUAKOi"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hSBMim StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 KmXFc"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kXSdaE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 WtXtt"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-dOSRxR iFXefe sc-bBrNTY jxRDWp"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 imalWr"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iiLUML StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          disabled=""
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iqmDog"
            disabled=""
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kXSdaE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 WtXtt"
            disabled=""
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Reversed Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-dOSRxR iFXefe sc-bBrNTY jxRDWp"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fUAKOi"
      >
        <span>
          Checkbox
        </span>
        <div
          class="StyledBox-sc-13pk1d4-0 hMhjhb StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 KmXFc"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kXSdaE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 WtXtt"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Toggle 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-dOSRxR iFXefe sc-bBrNTY jxRDWp"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fUAKOi"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iiLUML StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 KmXFc"
            type="checkbox"
          />
          <span
            class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 cRTSZa"
          >
            <span
              class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 ldAejS"
            />
          </span>
        </div>
        <span>
          Toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-dOSRxR iFXefe sc-bBrNTY jxRDWp"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fUAKOi"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iiLUML StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 KmXFc"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kXSdaE StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 WtXtt"
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;
